# rustos

./: .gitignore  Cargo.toml  Makefile  README.md  debug.gdb  flatten_elf.py
bootloader/: Cargo.toml  Makefile  boot  boot.S  boot.lds  x86-64-bootloader.json
bootloader/.cargo/: config
bootloader/src/: main.rs  stage0.S
core_reqs/src/: lib.rs
shared/cpu/src/: lib.rs
shared/elf_parser/src/: lib.rs
src/: main.rs
