[package]
name = "bootloader"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cpu = { path = "../cpu" }
core_reqs = { path = "../core_reqs" }

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"
debug = false